<?xml version="1.0"?>
<package format="2">
  <name>boundingbox_visualizer_msgs</name>
  <version>0.0.0</version>
  <description>The boundingbox_visualizer_msgs package</description>

   <maintainer email="young@visionlab.ssu.ac.kr">iros</maintainer>
  <url type="website">http://visionlab.ssu.ac.kr</url>
  <author email="young@visionlab.ssu.ac.kr">Youngjoon Han</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
    <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>