<?xml version="1.0"?>
<package>
  <name>turtlesim_pose_viewer</name>
  <version>0.1.0</version>
  <description>turtlesim pose viewer</description>
  <maintainer email="junyeong@soongsil.ac.kr">junyeong Park</maintainer>
  <author email="junyeong@soongsil.ac.kr">junyeong Park</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tutlesim</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tutlesim</run_depend>
  <run_depend>message_runtime</run_depend>
  <export></export>
</package>
